Fix servos UI on mobile (#4767)
* Fix servos UI on mobile

* Adjust scrollbar height

* Fix save button position & bottom padding

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -26,7 +26,7 @@ body {
 
     ::-webkit-scrollbar {
         width: 0.3rem;
-        height: 2em;
+        height: 0.3rem;
     }
     ::-webkit-scrollbar-thumb {
         background: var(--surface-600);
