--- a/src/css/tabs/servos.less
+++ b/src/css/tabs/servos.less
@@ -186,7 +186,7 @@
         margin: 10px;
     }
     .servoblock {
-        margin-bottom: 0;
+        margin-bottom: 24px;
         background-color: var(--surface-400);
     }
     .title2 {
@@ -265,10 +265,14 @@
         text-align: center;
         border-radius: 2px;
     }
+    .toolbar_fixed_bottom {
+        position: fixed;
+    }
 }
 .tab-servos.supported {
     .require-support {
         display: block;
+        overflow-x: auto;
     }
     .require-upgrade {
         display: none;
@@ -293,13 +297,6 @@
         .gui_box {
             min-height: auto;
         }
-        .servoblock {
-            margin-bottom: 15px;
-            > .spacer {
-                display: flex;
-                flex-wrap: wrap;
-            }
-        }
         .left.motors {
             width: 100%;
             order: 1;
@@ -319,24 +316,10 @@
         }
         .m-block {
             width: calc((100% - 80px) / 9);
-            &:last-child {
-                margin-right: 0;
-            }
         }
         .servos {
             .m-block {
                 width: calc((100% - 70px) / 8);
-                &:last-child {
-                    margin-left: 0;
-                }
-            }
-            .titles {
-                li {
-                    width: calc((100% - 70px) / 8);
-                    &:last-child {
-                        margin-left: 0;
-                    }
-                }
             }
         }
         .servo_testing {
